# endstone-tianyan-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_chs.md  README_eng.md  pyproject.toml
.github/workflows/: nightly.yml  workflow.yml
CloudflareWorker/: .dev.vars.example  package-lock.json  package.json  wrangler.toml
CloudflareWorker/public/: app.css  app.js  index.html
CloudflareWorker/scripts/: check-assets.js
CloudflareWorker/src/: index.js
WebUI/: index.html  script.js  server.py  style.css
WebUI-Next/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
WebUI-Next/src/: App.vue  env.d.ts  main.ts
WebUI-Next/src/api/: client.ts  types.ts
WebUI-Next/src/i18n/: index.ts
WebUI-Next/src/layouts/: MainLayout.vue
WebUI-Next/src/locales/: ru_RU.json
WebUI-Next/src/router/: index.ts
WebUI-Next/src/stores/: app.ts
WebUI-Next/src/views/: Dashboard.vue  DbInfo.vue  Login.vue
WebUI/assets/: vendor.js
WebUI/languages/: en_US.json  ru_RU.json  zh_CN.json
cmake/: embed_webui_resources.cmake  embed_webui_resources.py
include/: DataBase.hpp  EventListener.h  Global.h  Menu.h  TianyanCore.h  TianyanProtect.h  database.hpp  database_backend.h  database_util.h  event_listener.h  global.h  menu.h  mysql_backend.h  offline_inventory.h  rust_backend.h  sqlite_backend.h  tianyan_core.h  tianyan_plugin.h  tianyan_protect.h  translate.h  translate.hpp  world_inspector.h
include/webui/: server.h
include/webui/service/: admin_service.h  language_service.h  log_query_service.h
language/: en_US.json  ru_RU.json  zh_CN.json
language/zh_CN/: lang.json
rust_mysql/src/: lib.rs
src/: TianyanCore.cpp  event_listener.cpp  menu.cpp  mysql_backend.cpp  offline_inventory.cpp  rust_backend.cpp  sqlite_backend.cpp  tianyan_core.cpp  tianyan_plugin.cpp  tianyan_protect.cpp  version.h.in
src/endstone_tianyan/: tianyan_plugin.py
src/webui/: server.cpp
src/webui_adapter/: language_impl.cpp  language_impl.h  log_query_impl.cpp  log_query_impl.h
