[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-tianyan"
version = "1.1.7.2"
description = "一款可进行行为记录与查询、防刷屏、玩家封禁、物品栏查看的endstone插件/A plugin that can perform action logging and querying, prevent spamming, ban players, and view inventories - the Endstone plugin."
authors = [
    { name = "yuhang", email = "yuhang2006@hotmail.com" },
]
readme = "README.md"
keywords = ["endstone", "plugin", "tianyan"]
[project.urls]
Homepage = "https://github.com/yuhangle/Endstone_TianyanPlugin"
[project.entry-points."endstone"]
tianyan = "endstone_tianyan:TianyanPlugin"